# CodeJangler

./: .clinerules  .git-commit-message-generator-config.json  .gitignore  README.md  app.py  mcp_agent.config.yml  pr_manager_agent.py  pyproject.toml
.cursor/rules/: persona.mdc
code_jangler/: __init__.py  pr_manager.py
code_jangler/agents/: __init__.py  pr_agents.py
code_jangler/models/: __init__.py  pr_models.py
code_jangler/ui/: __init__.py  streamlit_ui.py
code_jangler/utils/: __init__.py  api_helpers.py
codejangler/: README.md  crew.yaml  pyproject.toml  setup.py
codejangler/codejangler/: cli.py
codejangler/codejangler/crews/: pr_optimizer.py
codejangler/codejangler/tools/: __init__.py  code_analysis.py  git_tools.py  github_api.py
codejangler/tests/: test_code_analysis.py  test_git_tools.py
docs/: PRD.md  implementationPlan.md
docs/logs/: cline_task_dec-28-2024_11-11-38-pm.md  cline_task_dec-28-2024_11-34-31-pm.md  cline_task_dec-28-2024_9-39-04-pm.md  task-001.md
docs/session/: goal.md  implementationPlan.md
example/: research_agent.py
pr_optimizer/: LICENSE  README.md  pyproject.toml
pr_optimizer/src/pr_optimizer/: __main__.py  crew.py  main.py  models.py  state_manager.py
pr_optimizer/src/pr_optimizer/config/: agents.yaml  tasks.yaml
pr_optimizer/src/pr_optimizer/tools/: __init__.py  code_analysis.py  git_tools.py  github_api.py
pr_optimizer/tests/: test_pr_optimizer_state.py  test_state_manager.py
